--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,12 @@
 *.war
 *.ear
 
+#Ignore idea settings
+*.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Ignore everuthing in /target or in /.idea
+*/target/*
+*/.idea/*
