--- a/StudentsSources/pom.xml
+++ b/StudentsSources/pom.xml
@@ -7,18 +7,14 @@
     <groupId>com.students</groupId>
     <artifactId>students</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
-    <dependencies>
+    <modules>
 
-
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.7</version>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
+        <module>students-hometask</module>
+        <module>students-samples</module>
+        <module>validation-api</module>
+    </modules>
 
     <build>
 
@@ -35,5 +31,17 @@
         </plugins>
 
     </build>
+
+
+    <dependencies>
+
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.7</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
