Added examples of simple rest-service application using spring configuration. Note was explictly added tomcat server to repository with configuration and startup scripts

--- a/StudentsSources/pom.xml
+++ b/StudentsSources/pom.xml
@@ -15,6 +15,7 @@
         <module>students-samples</module>
         <module>validation-api</module>
         <module>concurent-examples</module>
+        <module>studends-app</module>
     </modules>
 
     <profiles>
