--- a/StudentsSources/studends-app/studends-app-domain/pom.xml
+++ b/StudentsSources/studends-app/studends-app-domain/pom.xml
@@ -12,4 +12,40 @@
     <artifactId>studends-app-domain</artifactId>
 
 
+    <dependencies>
+
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>${commons.dbcp.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernare.version}</version>
+        </dependency>
+
+
+        <!--different database, driver actually there is no need in this dependency if it is provided at application server -->
+        <dependency>
+            <groupId>ojdbc</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>14</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.190</version>
+        </dependency>
+        <!--End of different drivers -->
+
+
+    </dependencies>
+
 </project>
