--- a/StudentsSources/studends-app/sutends-app-war/src/main/webapp/WEB-INF/web.xml
+++ b/StudentsSources/studends-app/sutends-app-war/src/main/webapp/WEB-INF/web.xml
@@ -31,4 +31,13 @@
         </listener-class>
     </listener>
 
+    <resource-ref>
+        <description>
+            Resource reference to a factory for java.sql.Connection
+        </description>
+        <res-ref-name>jdbc/ConnectionDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
