--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.jar
 *.war
 *.ear
+*.zip
 
 #Ignore idea settings
 *.iml
@@ -17,3 +18,4 @@ hs_err_pid*
 #Ignore everuthing in /target or in /.idea
 **/target
 **/.idea
+**/tomcat
