--- a/StudentsSources/studends-app/students-app-services/pom.xml
+++ b/StudentsSources/studends-app/students-app-services/pom.xml
@@ -30,7 +30,6 @@
             <version>${spring.version}</version>
         </dependency>
 
-
         <!--dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>jsr311-api</artifactId>
@@ -38,6 +37,23 @@
         </dependency-->
 
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-webmvc</artifactId>
+            <version>2.4.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.19.0.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.exigen.chartis.commission</groupId>
+            <artifactId>premier-commission-services</artifactId>
+            <version>21.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
